--- a/myApp/Dockerfile
+++ b/myApp/Dockerfile
@@ -4,4 +4,4 @@ RUN apk add --no-cache tzdata  git sqlite-dev postgresql-dev mysql-dev
 RUN npm install 
 ENV PORT 3000
 EXPOSE ${PORT}
-CMD ["node","ace serve"]
+CMD ["node ace","serve"]
