--- a/myApp/Dockerfile
+++ b/myApp/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:16-alpine3.16
 COPY . .
 RUN apk add --no-cache tzdata  git sqlite-dev postgresql-dev mysql-dev 
-RUN npm install 
+RUN chmod +x run.sh && npm install 
 ENV PORT 3000
 EXPOSE ${PORT}
-CMD ["node ace","serve"]
+CMD ["./run.sh"]
