--- a/myApp/.env
+++ b/myApp/.env
@@ -1,12 +1,15 @@
-HOST=localhost
-PORT=3333
+ENV=local
+DEBUG=true
+HOST=0.0.0.0
+
 APP_KEY=n96M1TPG821EdN4mMIjnGKxGytx9W2UJ
 NODE_ENV=development
 CACHE_VIEWS=false
 SESSION_DRIVER=cookie
-DB_CONNECTION=sqlite
-DB_HOST=127.0.0.1
-DB_PORT=
-DB_USER=root
-DB_PASSWORD=
-DB_DATABASE=adonis
+
+DB_CONNECTION=mysql
+DB_HOST=sql.db4free.net
+DB_PORT=3306
+DB_USER=abdo_adonisjs
+DB_PASSWORD=arh.27934
+DB_DATABASE=adonisjs_commerc
